[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
env_logger = "0.9.0"
futures-util = "0.3"
actix-web = "4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.7"